# kanban-cli

./: .gitignore  HOWTO.md  History.md  History_RU.md  README.md  README_RU.md  StyleGuide.md  pyproject.toml  requirements.txt
kanban/: board.py  category_colors.py  main.py  storage.py  task.py  task_operations.py
kanban/db/: category_colors.json  tasks.csv
kanban/kanban_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
kanban_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_rich.py
